rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__file_info_regular_file_80x24.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
assertion_line: 91
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                ┌File Information──────────────────────────────┐                ",
        "                │  Name     test.txt                           │                ",
        "                │  Path     /test/documents/test.txt           │                ",
        "                │  Size     2.0 KB (2048 bytes)                │                ",
        "                │  Type     File                               │                ",
        "                │                                              │                ",
        "                │  Created  N/A                                │                ",
        "                │  Modified [TIMESTAMP]                │                ",
        "                │  Accessed N/A                                │                ",
        "                │                                              │                ",
        "                │                                              │                ",
        "                │  Enter/Esc: close                            │                ",
        "                └──────────────────────────────────────────────┘                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 33, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 6, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 6, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 28, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 61, y: 6, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 7, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 7, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 28, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 61, y: 7, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 8, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 8, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 28, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 61, y: 8, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 9, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 28, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 61, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 11, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 28, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 61, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 12, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 28, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 61, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 13, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 28, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 61, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 16, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 61, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
